using System;

[Serializable]
public abstract class BattleObject
{
	public BattleSide Side = BattleSide.Neutral;
}
